# mhooks

./: CMakeLists.txt  README.md
include/mhooks/: amxx.h  messages.h  metamod.h  reapi.h
include/mhooks/amxxapi/: amxxapi.h  amxxapi_mhookchain.h
include/mhooks/common/: mhook.h  mhookchain.h
include/mhooks/messages/: message_args.h  message_mhookchain.h  messages.h
include/mhooks/metaapi/: metaapi.h  metaapi_mhookchain.h
include/mhooks/metamod/: commands.h  engine.h  gamedll.h  metamod_mhookchain.h
include/mhooks/reapi/: cvar_change.h  reapi_mhookchain.h  regamedll.h  rehlds.h
src/: cleanup.h  hookchain_manager.h
src/amxxapi/: amxxapi.cpp
src/common/: mhook.cpp
src/messages/: block_message.h  consts.h  message.h  message_mhok.h  message_mhookchain.cpp  messages.cpp
src/metaapi/: metaapi.cpp
src/metamod/: commands.cpp  createhook.h  engine.cpp  gamedll.cpp  metamod_mhook.h
src/reapi/: createhook.h  cvar_change.cpp  regamedll.cpp  rehlds.cpp
